--- a/founder.html
+++ b/founder.html
@@ -305,7 +305,7 @@
 
       <div class="signature">
         <strong>[Founder Name]</strong><br />
-        Founder, Wentworth Capital
+       Shanqinag Zhou, Wentworth Capital
       </div>
     </section>
 
