--- a/letters.html
+++ b/letters.html
@@ -426,6 +426,7 @@
           <p>Structured, concise, and decision-relevant communication for long-term partners.</p>
         </div>
 
+        <!-- Only H1 2025 -->
         <div class="row">
           <div>
             <div class="meta">
@@ -440,69 +441,14 @@
             </div>
           </div>
           <div class="right">
-            <a class="download" href="#" onclick="alert('Attach your PDF letter link here.'); return false;">Download PDF</a>
+            <a class="download"
+               href="assets/letters/Wentworth_Shareholder_Letter_H1_2025.pdf"
+               target="_blank"
+               rel="noopener noreferrer">
+              Download PDF
+            </a>
             <a class="read" href="commentary.html">Related commentary</a>
-            <div class="small">File: Not published</div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div>
-            <div class="meta">
-              <span class="date">FY 2024</span>
-              <span class="pill">Letter</span>
-              <span class="pill">Process</span>
-            </div>
-            <div class="title">Shareholder Letter – FY 2024</div>
-            <div class="desc">
-              A process-focused letter covering research discipline, governance as a compounding mechanism, and how we evaluate
-              opportunities across a range of outcomes.
-            </div>
-          </div>
-          <div class="right">
-            <a class="download" href="#" onclick="alert('Attach your PDF letter link here.'); return false;">Download PDF</a>
-            <a class="read" href="governance.html">Governance framework</a>
-            <div class="small">File: Not published</div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div>
-            <div class="meta">
-              <span class="date">H2 2024</span>
-              <span class="pill">Letter</span>
-              <span class="pill">Risk</span>
-            </div>
-            <div class="title">Shareholder Letter – H2 2024</div>
-            <div class="desc">
-              Discussion of portfolio construction, concentration discipline, and stress testing. We outline how liquidity and correlation
-              behave in dislocations and what we do to remain flexible.
-            </div>
-          </div>
-          <div class="right">
-            <a class="download" href="#" onclick="alert('Attach your PDF letter link here.'); return false;">Download PDF</a>
-            <a class="read" href="risk.html">Risk management</a>
-            <div class="small">File: Not published</div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div>
-            <div class="meta">
-              <span class="date">FY 2023</span>
-              <span class="pill">Letter</span>
-              <span class="pill">Long-Term</span>
-            </div>
-            <div class="title">Shareholder Letter – FY 2023</div>
-            <div class="desc">
-              A long-term perspective on compounding, what we aim to own, and why patience can be a competitive advantage when paired with
-              research and valuation discipline.
-            </div>
-          </div>
-          <div class="right">
-            <a class="download" href="#" onclick="alert('Attach your PDF letter link here.'); return false;">Download PDF</a>
-            <a class="read" href="philosophy.html">Investment philosophy</a>
-            <div class="small">File: Not published</div>
+            <div class="small">File: Published</div>
           </div>
         </div>
       </div>
