--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Research & Insights – Wentworth Capital</title>
+  <title>Shareholder Letters – Wentworth Capital</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +13,7 @@
     :root{
       --bg-sky:#E6EDF5;
       --bg:#F5F6F8;
-      --card:rgba(255,255,255,.62);
-      --card2:rgba(255,255,255,.72);
+      --card:#FFFFFF;
       --ink:#0F172A;
       --muted:#6B7280;
       --border:rgba(15,23,42,.10);
@@ -23,327 +22,315 @@
       --accent:#2B4C7E;
       --pill:999px;
       --radius:18px;
-      --radius2:14px;
-      --max:1120px;
     }
 
-    *{box-sizing:border-box}
-    html,body{height:100%}
+    *{box-sizing:border-box;margin:0;padding:0}
     body{
-      margin:0;
-      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+      font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       color:var(--ink);
-      background:
-        radial-gradient(1200px 520px at 50% -10%, rgba(43,76,126,.18), rgba(43,76,126,0) 60%),
-        linear-gradient(180deg, var(--bg-sky), var(--bg));
+      background:var(--bg);
+      line-height:1.65;
     }
     a{color:inherit;text-decoration:none}
+    ul{list-style:none}
 
-    .wrap{max-width:var(--max); margin:0 auto; padding:26px 18px 60px}
-
-    /* ===== Header (match your home page feel: left brand, centered nav, right contact pill) ===== */
+    /* Header */
     .header{
-      display:grid;
-      grid-template-columns: 1fr auto 1fr;
-      align-items:center;
-      padding:10px 2px 14px;
+      position:sticky;top:0;z-index:1000;
+      background:rgba(255,255,255,.86);
+      backdrop-filter:blur(10px);
+      border-bottom:1px solid var(--border);
+    }
+    .header-inner{
+      max-width:1120px;margin:0 auto;
+      padding:14px 16px;
+      display:flex;align-items:center;justify-content:space-between;gap:14px;
     }
     .brand{
-      font-weight:650;
-      letter-spacing:.2px;
-    }
-    .nav{
-      display:flex;
-      gap:22px;
-      align-items:center;
-      justify-content:center;
-      font-size:14px;
-      color:rgba(15,23,42,.80);
-    }
-    .nav a{opacity:.9}
-    .nav a.active{opacity:1; color:rgba(15,23,42,.95); font-weight:500}
-    .right{
-      display:flex;
-      justify-content:flex-end;
-      align-items:center;
-    }
-    .contactPill{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      padding:8px 14px;
-      border-radius:999px;
-      border:1px solid rgba(15,23,42,.10);
-      background:rgba(255,255,255,.55);
-      color:rgba(15,23,42,.85);
-      font-size:13px;
-      box-shadow:0 6px 16px rgba(15,23,42,.06);
-      backdrop-filter: blur(10px);
+      font-size:18px;font-weight:500;letter-spacing:.02em;
+      color:var(--ink);white-space:nowrap;
     }
 
-    /* ===== Hero ===== */
-    .hero{
-      margin-top:8px;
-      padding:26px 24px;
+    .menu-toggle{display:none;font-size:20px;border:none;background:transparent;cursor:pointer}
+
+    .nav{display:flex;align-items:center;gap:18px}
+    .nav > ul{display:flex;align-items:center;gap:22px}
+    .nav-item{position:relative;font-size:14px;font-weight:500}
+    .nav-trigger{
+      display:inline-flex;align-items:center;gap:8px;
+      padding:8px 0;cursor:pointer;
+    }
+    .nav-trigger::after{
+      content:"";
+      display:block;height:2px;width:0;border-radius:999px;
+      background:linear-gradient(90deg,var(--ink),var(--accent));
+      transition:width .18s ease;
+      margin-top:2px;
+    }
+    .nav-item:hover .nav-trigger::after{width:100%}
+
+    .dropdown{
+      position:absolute;top:100%;left:0;
+      min-width:240px;
       background:var(--card);
       border:1px solid var(--border);
-      border-radius:var(--radius);
-      box-shadow:0 10px 26px rgba(15,23,42,.08);
-      backdrop-filter: blur(10px);
+      border-radius:14px;
+      box-shadow:var(--shadow2);
+      padding:10px 0;margin-top:10px;
+      opacity:0;visibility:hidden;transform:translateY(6px);
+      transition:all .16s ease;
+      z-index:1000;
     }
-    .kicker{
-      font-size:12px;
-      letter-spacing:.18em;
-      color:rgba(15,23,42,.55);
+    .nav-item:hover .dropdown{
+      opacity:1;visibility:visible;transform:translateY(0);
     }
-    h1{margin:8px 0 10px; font-size:38px; line-height:1.1}
-    .sub{
-      margin:0;
-      max-width:900px;
-      color:rgba(15,23,42,.70);
-      line-height:1.55;
-      font-size:14px;
+    .dropdown a{
+      display:block;padding:10px 14px;
+      font-size:13px;color:var(--ink);
     }
-    .tabs{
-      display:flex; flex-wrap:wrap; gap:10px;
-      margin-top:16px;
-      align-items:center;
-    }
-    .tab{
-      border:1px solid var(--border);
-      background:rgba(255,255,255,.70);
-      padding:10px 12px;
-      border-radius:var(--pill);
-      font-size:13px;
-      color:rgba(15,23,42,.78);
+    .dropdown a:hover{background:rgba(15,23,42,.04)}
+
+    .actions{display:flex;align-items:center;gap:10px}
+    .btn{
+      border:1px solid rgba(15,23,42,.18);
+      background:linear-gradient(180deg,#fff,#f7f8fa);
+      padding:8px 14px;border-radius:var(--pill);
+      font-size:13px;font-weight:500;
       cursor:pointer;
-      user-select:none;
+      transition:transform .16s ease, box-shadow .16s ease;
+      display:inline-flex;align-items:center;gap:8px;
     }
-    .tab.active{
-      background:linear-gradient(180deg, rgba(43,76,126,.12), rgba(255,255,255,.85));
-      border-color:rgba(43,76,126,.22);
-      color:rgba(15,23,42,.92);
-      box-shadow:0 8px 18px rgba(43,76,126,.10);
-    }
-    .tabs .hint{
-      margin-left:6px;
-      color:rgba(15,23,42,.60);
-      font-size:13px;
+    .btn:hover{transform:translateY(-1px);box-shadow:var(--shadow2)}
+    .btn.secondary{
+      border:1px solid rgba(15,23,42,.12);
+      background:#fff;
     }
 
-    /* ===== Grid ===== */
-    .grid{
+    .backdrop{
+      position:fixed;inset:0;
+      background:rgba(15,23,42,.35);
+      opacity:0;visibility:hidden;
+      transition:all .16s ease;
+      z-index:900;
+    }
+    .backdrop.show{opacity:1;visibility:visible}
+
+    /* Page */
+    .wrap{max-width:1120px;margin:22px auto 40px;padding:0 16px}
+    .hero{
+      background:var(--bg-sky);
+      border:1px solid rgba(15,23,42,.08);
+      border-radius:22px;
+      box-shadow:var(--shadow);
+      padding:22px;
+    }
+    .kicker{
+      font-size:11px;letter-spacing:.18em;
+      text-transform:uppercase;color:rgba(15,23,42,.55);
+      margin-bottom:8px;
+    }
+    h1{
+      font-size:28px;line-height:1.2;font-weight:650;
+      margin-bottom:10px;
+    }
+    .sub{
+      font-size:13px;color:rgba(15,23,42,.65);
+      max-width:980px;
+    }
+
+    .toolbar{
+      margin-top:14px;
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
+      justify-content:space-between;
+    }
+    .toolbar .left{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+    .hint{font-size:12px;color:rgba(15,23,42,.62)}
+
+    .layout{
       margin-top:18px;
       display:grid;
-      grid-template-columns: 1.55fr .95fr;
+      grid-template-columns:minmax(0, 2fr) minmax(0, 1fr);
       gap:16px;
       align-items:start;
     }
-    @media (max-width: 980px){
-      .grid{grid-template-columns:1fr}
-    }
 
-    /* ===== Panels ===== */
-    .panel{
-      background:var(--card2);
+    .card{
+      background:var(--card);
       border:1px solid var(--border);
       border-radius:var(--radius);
-      box-shadow:0 10px 26px rgba(15,23,42,.08);
-      backdrop-filter: blur(10px);
+      box-shadow:0 2px 10px rgba(15,23,42,.05);
+      overflow:hidden;
     }
-    .panel .hd{
-      padding:16px 18px;
-      border-bottom:1px solid rgba(15,23,42,.08);
+    .head{
+      padding:16px 16px 12px;
+      border-bottom:1px solid var(--border);
+      background:rgba(15,23,42,.02);
     }
-    .panel .hd h2{margin:0; font-size:16px; letter-spacing:.2px}
-    .panel .hd p{margin:6px 0 0; font-size:13px; color:rgba(15,23,42,.65); line-height:1.45}
-    .panel .bd{padding:14px 14px 16px}
+    .head h2{
+      font-size:14px;font-weight:650;letter-spacing:.02em;
+      margin-bottom:4px;
+    }
+    .head p{
+      font-size:12.5px;color:rgba(15,23,42,.64);
+    }
 
-    /* ===== Single research card ===== */
-    .item{
-      border:1px solid rgba(15,23,42,.10);
-      background:rgba(255,255,255,.78);
-      border-radius:var(--radius2);
-      padding:14px 14px 12px;
-      box-shadow:0 6px 16px rgba(15,23,42,.06);
+    .row{
+      padding:14px 16px;
+      border-bottom:1px solid var(--border);
+      display:flex;
+      gap:14px;
+      align-items:flex-start;
+      justify-content:space-between;
     }
-    .metaRow{
-      display:flex; flex-wrap:wrap; gap:8px;
-      align-items:center; justify-content:space-between;
+    .row:last-child{border-bottom:none}
+
+    .meta{
+      display:flex;flex-wrap:wrap;gap:8px;align-items:center;
+      margin-bottom:6px;
     }
-    .pillRow{display:flex; flex-wrap:wrap; gap:8px}
+    .date{
+      font-size:11px;letter-spacing:.14em;text-transform:uppercase;
+      color:rgba(15,23,42,.55);
+    }
     .pill{
-      padding:6px 10px;
-      border-radius:var(--pill);
-      font-size:12px;
-      border:1px solid rgba(15,23,42,.10);
-      background:rgba(245,246,248,.80);
-      color:rgba(15,23,42,.70);
-    }
-    .pill.strong{
-      background:rgba(43,76,126,.10);
-      border-color:rgba(43,76,126,.22);
-      color:rgba(15,23,42,.92);
-      font-weight:500;
+      font-size:11px;
+      padding:6px 10px;border-radius:var(--pill);
+      border:1px solid rgba(15,23,42,.14);
+      background:rgba(255,255,255,.65);
+      color:rgba(15,23,42,.72);
+      white-space:nowrap;
     }
     .title{
-      margin:10px 0 6px;
-      font-size:16px;
-      font-weight:650;
-      letter-spacing:.1px;
+      font-size:15px;font-weight:650;margin-bottom:6px;
     }
     .desc{
-      margin:0 0 10px;
-      color:rgba(15,23,42,.68);
-      font-size:13px;
-      line-height:1.55;
+      font-size:13px;color:rgba(15,23,42,.72);
+      max-width:680px;
     }
-    .links{
-      display:flex; flex-wrap:wrap; gap:12px;
-      font-size:13px;
-      color:rgba(43,76,126,.95);
-      align-items:center;
-    }
-    .links a{
-      display:inline-flex; align-items:center; gap:6px;
-      padding:6px 10px;
-      border-radius:999px;
-      border:1px solid rgba(43,76,126,.20);
-      background:rgba(43,76,126,.06);
-    }
-    .links a:hover{background:rgba(43,76,126,.10)}
-    .arrow{font-weight:650}
 
-    /* ===== Right principles card ===== */
-    .principles{
-      background:linear-gradient(180deg, rgba(15,23,42,.92), rgba(15,23,42,.88));
-      color:rgba(255,255,255,.92);
-      border:1px solid rgba(255,255,255,.10);
-      border-radius:var(--radius);
-      box-shadow:0 14px 34px rgba(15,23,42,.18);
-      padding:18px 18px 16px;
-      position:sticky;
-      top:16px;
+    .right{
+      display:flex;
+      flex-direction:column;
+      gap:8px;
+      align-items:flex-end;
+      min-width:190px;
     }
-    .principles .k{font-size:11px; letter-spacing:.18em; color:rgba(255,255,255,.70)}
-    .principles h3{margin:8px 0 10px; font-size:18px; line-height:1.25}
-    .principles p{margin:0 0 12px; color:rgba(255,255,255,.75); font-size:13px; line-height:1.6}
-    .bullets{margin:0; padding-left:16px; color:rgba(255,255,255,.82); font-size:13px; line-height:1.7}
-    .bullets li{margin:6px 0}
-    .tagRow{display:flex; flex-wrap:wrap; gap:8px; margin-top:12px}
-    .tag{
+    .small{
       font-size:12px;
-      padding:6px 10px;
-      border-radius:999px;
-      border:1px solid rgba(255,255,255,.14);
-      background:rgba(255,255,255,.06);
-      color:rgba(255,255,255,.82);
-    }
-
-    /* ===== Modal ===== */
-    .modalBackdrop{
-      position:fixed; inset:0;
-      background:rgba(2,6,23,.55);
-      display:none;
-      align-items:center;
-      justify-content:center;
-      padding:18px;
-      z-index:50;
-    }
-    .modal{
-      width:min(980px, 100%);
-      max-height:85vh;
-      overflow:auto;
-      background:rgba(255,255,255,.95);
-      border:1px solid rgba(15,23,42,.12);
-      border-radius:22px;
-      box-shadow:0 30px 80px rgba(2,6,23,.35);
-    }
-    .modalHeader{
-      padding:16px 18px;
-      display:flex; align-items:flex-start; justify-content:space-between; gap:12px;
-      border-bottom:1px solid rgba(15,23,42,.10);
-    }
-    .modalHeader h3{margin:0; font-size:18px}
-    .modalHeader .meta{
-      margin-top:4px;
       color:rgba(15,23,42,.62);
-      font-size:13px;
-      line-height:1.4;
+      text-align:right;
     }
-    .xbtn{
-      border:1px solid rgba(15,23,42,.14);
-      background:rgba(245,246,248,.9);
-      border-radius:999px;
-      padding:8px 10px;
-      cursor:pointer;
+    .download{
+      color:var(--accent);
       font-weight:650;
+      font-size:12px;
+      display:inline-flex;align-items:center;gap:6px;
     }
-    .modalBody{padding:16px 18px 20px}
-    .section{margin:0 0 16px}
-    .section h4{
-      margin:0 0 8px;
-      font-size:13px;
-      letter-spacing:.14em;
+    .download::after{content:"↓";font-size:12px}
+    .read{
       color:rgba(15,23,42,.70);
-      text-transform:uppercase;
+      font-weight:650;
+      font-size:12px;
+      display:inline-flex;align-items:center;gap:6px;
     }
-    .section p, .section li{
-      color:rgba(15,23,42,.72);
-      font-size:13px;
-      line-height:1.65;
-    }
-    .cols{
-      display:grid;
-      grid-template-columns:1fr 1fr;
-      gap:12px;
-    }
-    @media (max-width: 860px){ .cols{grid-template-columns:1fr} }
+    .read::after{content:"→";font-size:11px}
 
-    table{
-      width:100%;
-      border-collapse:collapse;
-      overflow:hidden;
-      border-radius:14px;
-      border:1px solid rgba(15,23,42,.10);
-      background:rgba(255,255,255,.85);
+    /* Side panel */
+    .side{
+      background:rgba(15,23,42,.92);
+      border-radius:18px;
+      padding:16px 14px;
+      color:#fff;
+      box-shadow:var(--shadow2);
     }
-    th,td{
-      padding:10px 10px;
-      border-bottom:1px solid rgba(15,23,42,.08);
+    .side .kicker{color:rgba(255,255,255,.55)}
+    .side h3{
+      font-size:16px;font-weight:650;margin:6px 0 10px;
+    }
+    .side p{
+      font-size:12.5px;color:rgba(255,255,255,.78);
+      margin-bottom:10px;
+    }
+    .side ul{margin-top:8px}
+    .side li{
+      font-size:12.5px;color:rgba(255,255,255,.78);
+      margin-bottom:8px;
+    }
+    .pill-row{
+      display:flex;flex-wrap:wrap;gap:8px;margin-top:10px;
+    }
+    .side .pill{
+      border:1px solid rgba(255,255,255,.18);
+      background:rgba(255,255,255,.06);
+      color:rgba(255,255,255,.86);
+    }
+
+    .legal{
+      margin-top:14px;
+      background:#fff;
+      border:1px solid var(--border);
+      border-radius:16px;
+      padding:14px 14px;
       font-size:12.5px;
-      text-align:left;
-      color:rgba(15,23,42,.75);
-      vertical-align:top;
+      color:rgba(15,23,42,.70);
+      box-shadow:0 2px 10px rgba(15,23,42,.05);
+      max-width:980px;
     }
-    th{
-      font-size:12px;
-      letter-spacing:.10em;
-      text-transform:uppercase;
-      color:rgba(15,23,42,.65);
-      background:rgba(245,246,248,.90);
-    }
-    .ctaRow{display:flex; flex-wrap:wrap; gap:10px; margin-top:12px}
-    .btn{
-      display:inline-flex; align-items:center; gap:8px;
-      padding:10px 12px;
-      border-radius:999px;
-      border:1px solid rgba(43,76,126,.22);
-      background:rgba(43,76,126,.08);
-      color:rgba(15,23,42,.90);
-      font-size:13px;
-      font-weight:500;
-      cursor:pointer;
-    }
-    .btn.primary{
-      background:linear-gradient(180deg, rgba(43,76,126,.18), rgba(43,76,126,.10));
-      border-color:rgba(43,76,126,.28);
-    }
-    .note{
-      font-size:12px;
+    .legal strong{color:var(--ink)}
+
+    .footer{
+      border-top:1px solid var(--border);
+      background:#f9fafb;
+      text-align:center;
       color:rgba(15,23,42,.55);
-      margin-top:10px;
-      line-height:1.55;
+      font-size:11px;
+      padding:14px 16px;
+      margin-top:28px;
+    }
+
+    @media (max-width:960px){
+      .layout{grid-template-columns:1fr}
+      .right{align-items:flex-start}
+    }
+
+    @media (max-width:720px){
+      .brand{font-size:16px}
+      .menu-toggle{display:block}
+
+      .nav{
+        position:fixed;inset:0 0 0 auto;
+        width:80%;max-width:300px;
+        background:#fff;
+        border-left:1px solid var(--border);
+        box-shadow:-10px 0 30px rgba(15,23,42,.18);
+        transform:translateX(100%);
+        transition:transform .18s ease;
+        flex-direction:column;align-items:stretch;
+        padding:16px 12px 20px;
+        z-index:950;
+        gap:10px;
+      }
+      .nav.open{transform:translateX(0)}
+      .nav > ul{flex-direction:column;align-items:stretch;gap:4px}
+      .nav-trigger{justify-content:space-between}
+
+      .dropdown{
+        position:static;opacity:1;visibility:visible;transform:none;
+        box-shadow:none;border:none;
+        margin:6px 0 8px;padding:0 0 0 10px;
+        border-left:2px solid rgba(15,23,42,.10);
+        display:none;
+      }
+      .dropdown.open{display:block}
+      .actions{width:100%}
+      .btn{width:100%}
+
+      .row{flex-direction:column}
+      .right{min-width:auto;width:100%;align-items:flex-start}
+      .small{text-align:left}
     }
   </style>
 </head>
